fixed story animation on ios

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,7 +73,7 @@ html {
 .story {
     transform: scale(0.95);
     border: 1px solid rgba(255,255,255,0.14);
-    filter:  drop-shadow(0px 0px 0px rgba(0,0,0,0));
+    /*filter:  drop-shadow(0px 0px 0px rgba(0,0,0,0));*/
 
     -webkit-animation: story-fade-in 1s;
     -moz-animation: story-fade-in 1s;
@@ -91,19 +91,20 @@ html {
     -webkit-animation-fill-mode: both;
     -moz-animation-fill-mode: both;
     -ms-animation-fill-mode: both;
+
+    -webkit-appearance: none;
 }
 
 @keyframes story-fade-in {
     0% {
-        filter:  drop-shadow(0px 0px 0px rgba(0,0,0,0));
         transform: scale(0.95);
         border: 1px solid rgba(255,255,255,0.14);
+        box-shadow: 0 0 0 rgba(0,0,0,0);
     }
-
     100% {
-        filter:  drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.65));
         transform: scale(1);
-        border: 1px solid rgba(255,255,255,0);
+        border: 1px solid rgba(255,255,255,0.05);
+        box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.6);
     }
 }
 .pagination__item {
